# sysdig-mcp-server

./: .dockerignore  .envrc  .gitignore  .golangci.yml  .mcp.json  .pre-commit-config.yaml  AGENTS.md  AUTHORS  CODEOWNERS  Dockerfile  LICENSE  LICENSE.txt  Makefile  README.md  app_config.yaml  docker-base-aarch64.nix  docker-base-amd64.nix  docker.nix  flake.nix  go.mod  go.sum  justfile  main.py  mcp.json  package.nix  pyproject.toml  ruff.toml
.gemini/: settings.json
.github/: pull_request_template.md
.github/git-chglog/: config.yml
.github/workflows/: helm_test.yaml  publish.yaml  publish.yml  pull-request-ci.yaml  test.yaml  test_image.yaml
charts/sysdig-mcp/: Chart.yaml  values.schema.json  values.yaml
charts/sysdig-mcp/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  secrets.yaml  service.yaml  serviceaccount.yaml
charts/sysdig-mcp/templates/tests/: test-connection.yaml
cmd/server/: main.go
docs/: RELEASING.md  TROUBLESHOOTING.md
internal/config/: config.go  config_test.go
internal/infra/clock/: clock.go
internal/infra/clock/mocks/: clock.go
internal/infra/mcp/: client_permissions_integration_test.go  client_process_tree_integration_test.go  mcp_handler.go  mcp_handler_test.go  mcp_suite_test.go  permission_checker.go  permission_checker_test.go  tool_generate_sysql.go  tool_generate_sysql_test.go  tool_get_event_info.go  tool_get_event_info_test.go  tool_get_event_process_tree.go  tool_get_event_process_tree_test.go  tool_list_runtime_events.go  tool_list_runtime_events_test.go  tool_run_sysql.go  tool_run_sysql_test.go  utils.go
internal/infra/mcp/tools/: README.md  test_helpers_test.go  time_window.go  time_window_test.go  tool_generate_sysql.go  tool_generate_sysql_test.go  tool_get_event_info.go  tool_get_event_info_test.go  tool_get_event_process_tree.go  tool_get_event_process_tree_test.go  tool_k8s_list_clusters.go  tool_k8s_list_clusters_test.go  tool_k8s_list_count_pods_per_cluster.go  tool_k8s_list_count_pods_per_cluster_test.go  tool_k8s_list_cronjobs.go  (+88 more)
internal/infra/sysdig/: client.gen.go  client.go  client_extension.go  client_generate_sysql.go  client_generate_sysql_integration_test.go  client_permissions_integration_test.go  client_process_tree.go  client_process_tree_integration_test.go  client_test.go  errors.go  sysdig_suite_test.go
tests/: config_test.py  conftest.py  events_feed_test.py  mcp_test_client.py  tools_test.py
tests/e2e/: test_tools.py
tests/e2e/data/: test.yaml
tests/e2e/iac_violations/: k8s-deployment.yaml
tests/test_data/events_feed/: event_info_response.json
tools/cli_scanner/: tool.py
tools/events_feed/: tool.py
tools/inventory/: tool.py
tools/sysdig_sage/: tool.py
tools/sysdig_sysql/: tool.py
tools/sysql/: tool.py
tools/vulnerability_management/: tool.py
utils/: app_config.py  mcp_server.py  query_helpers.py
utils/auth/: auth_config.py
utils/auth/middleware/: auth.py
utils/middleware/: auth.py
utils/reports/: inventory_report.py
utils/sysdig/: api.py  client_config.py  helpers.py  legacy_sysdig_api.py  old_sysdig_api.py
(+2 files in other folders)
