[project]
name = "sysdig-mcp-server"
version = "0.1.3-beta.0"
description = "Sysdig MCP Server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]==1.9.4",
    "python-dotenv>=1.1.0",
    "pyyaml==6.0.2",
    "sqlalchemy==2.0.36",
    "sqlmodel==0.0.22",
    "sysdig-sdk @ git+https://github.com/sysdiglabs/sysdig-sdk-python@e9b0d336c2f617f3bbd752416860f84eed160c41",
    "dask==2025.4.1",
    "oauthlib==3.2.2",
    "fastapi==0.115.12",
    "fastmcp==2.5.1",
    "requests",
]

[project.scripts]
sysdig-mcp-server = "main:main"

[tool.uv]
dev-dependencies = [
    "pytest-cov==6.2.1",
    "pytest==8.4.1",
    "ruff==0.12.1",
]

[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=7"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
py-modules = ["main"]
packages = ["utils", "tools"]


[tool.pytest.ini_options]
testpaths = [
    "tests",
    "integration",
]
