[project]
name = "sysdig-mcp-server"
version = "0.2.1"
description = "Sysdig MCP Server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]~=1.14.0",
    "python-dotenv~=1.1",
    "pyyaml~=6.0",
    "sqlalchemy~=2.0",
    "sqlmodel~=0.0.22",
    "sysdig-sdk-python @ git+https://github.com/sysdiglabs/sysdig-sdk-python@852ee2ccad12a8b445dd4732e7f3bd44d78a37f7",
    "dask~=2025.4",
    "oauthlib~=3.2",
    "fastapi~=0.116.1",
    "fastmcp @ git+https://github.com/jlowin/fastmcp@7e4aaa86969e04a05330c6d4e55f9b6c647c8756",
    # "fastmcp~=2.12.0", will use this form once new releases are pushed quicker to PyPI
    "requests",
]

[project.scripts]
sysdig-mcp-server = "main:main"

[tool.uv]
dev-dependencies = [
    "pytest-cov~=6.2",
    "pytest~=8.4",
    "ruff~=0.12.1",
    "fastmcp @ git+https://github.com/jlowin/fastmcp@7e4aaa86969e04a05330c6d4e55f9b6c647c8756",
]

[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=7"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
py-modules = ["main"]
packages = ["utils", "tools"]


[tool.pytest.ini_options]
testpaths = [
    "tests",
    "integration",
]
